[package]
name = "rparse"
version = "0.1.0"
description = "Simple human-readable command-line parser"
license = "WTFPL"
license-file = "LICENSE"
homepage = "https://crates.io/crates/rparse"
authors = ["jay_sbcv <gitlab@sbcv.co.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
